# bevy_compute_readback

./: Cargo.toml  README.md
assets/shaders/: texture_readback.wgsl
examples/: texture_readback.rs
src/: lib.rs
