[package]
edition = "2024"
name = "bevy_compute_readback"
version = "0.1.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Simplify compute shaders with readback in the Bevy game engine."
documentation = "https://docs.rs/bevy_compute_readback/latest/bevy_compute_readback"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_compute_readback"
repository = "https://github.com/Katsutoshii/bevy_compute_readback"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy_math = { version = "0.16", default-features = false }
bevy_image = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_render = { version = "0.16", default-features = false }
bevy_asset = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }
bevy_state = { version = "0.16", default-features = false }

image = "0.25"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.16", features = ["file_watcher"] }
bevy-inspector-egui = "0.31"
bevy_egui = { version = "0.34", default-features = false }

[[example]]
name = "texture_readback"
