[package]
edition = "2024"
name = "bevy_compute_readback"
version = "0.19.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Simplify compute shaders with readback in the Bevy game engine."
documentation = "https://docs.rs/bevy_compute_readback/latest/bevy_compute_readback"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_compute_readback"
repository = "https://github.com/Katsutoshii/bevy_compute_readback"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_render",
    "bevy_shader",
] }

image = "0.25"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.19", features = ["file_watcher", "dynamic_linking"] }
bevy-inspector-egui = { version = "0.37" }
bevy_egui = { version = "0.40" }

[[example]]
name = "texture_readback"
